--- a/RAJ.mdx
+++ b/RAJ.mdx
@@ -3,3 +3,4 @@ npx tsc --init - Init typescript
 npx prisma init --datasource-provider SQLite
 npx prisma migrate dev - Migrate db
 npx prisma studio - open prims studio
+npx tailwindcss init -p
