--- a/RAJ.mdx
+++ b/RAJ.mdx
@@ -4,3 +4,4 @@ npx prisma init --datasource-provider SQLite
 npx prisma migrate dev - Migrate db
 npx prisma studio - open prims studio
 npx tailwindcss init -p
+yarn start -- clear - clean cacho expo initialize
