prisma diagram generator

--- a/RAJ.mdx
+++ b/RAJ.mdx
@@ -5,4 +5,7 @@ npx prisma migrate dev - Migrate db
 npx prisma studio - open prims studio
 npx tailwindcss init -p
 yarn start -- clear - clean cacho expo initialize
-18:47
+npx prisma generate - generate prisma diagram generate
+
+
+18:47 2 aula
