--- a/RAJ.mdx
+++ b/RAJ.mdx
@@ -6,7 +6,7 @@ npx prisma studio - open prims studio
 npx tailwindcss init -p
 yarn start -- clear - clean cacho expo initialize
 npx prisma generate - generate prisma diagram generate
-npx prims db seed - run seed db
+npx prisma db seed - run seed db
 
 
 18:47 2 aula
